Gral. Agregar: Clase para test de metodos

--- a/angular.json
+++ b/angular.json
@@ -86,10 +86,14 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "karmaConfig": "karma.conf.js"
           }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
